--- a/UNAG/templates/home/menu_principal.html
+++ b/UNAG/templates/home/menu_principal.html
@@ -9,16 +9,6 @@
 	<div class="col-md-4"  style="vertical-align:middle;">
 		<div class="well">
 			<center>
-				<a href="{% url 'vista_main_administration' %}">
-					<img src="/media/images/setting.png" width="150" height="150">
-					<h3>Administración</h3>
-				</a>
-			</center>
-		</div>
-	</div>
-	<div class="col-md-4"  style="vertical-align:middle;">
-		<div class="well">
-			<center>
 				<a href="{% url 'alumno_menu_principal' %}">
 					<img src="/media/images/student.png"  width="150" height="150">
 					<h3>Alumnos</h3>
@@ -32,6 +22,26 @@
 				<a href="{% url 'nuevo_docente' %}">
 					<img src="/media/images/teacher.png"  width="150" height="150">
 					<h3>Catedrático</h3>
+				</a>
+			</center>
+		</div>
+	</div>
+	<div class="col-md-4"  style="vertical-align:middle;">
+		<div class="well">
+			<center>
+				<a href="{% url 'registro_inicio' %}">
+					<img src="/media/images/register.png" width="150" height="150">
+					<h3>Registro</h3>
+				</a>
+			</center>
+		</div>
+	</div>
+	<div class="col-md-4"  style="vertical-align:middle;">
+		<div class="well">
+			<center>
+				<a href="{% url 'vista_main_administration' %}">
+					<img src="/media/images/setting.png" width="150" height="150">
+					<h3>Administración</h3>
 				</a>
 			</center>
 		</div>
