--- a/UNAG/templates/alumnos/registro_alumno_excel.html
+++ b/UNAG/templates/alumnos/registro_alumno_excel.html
@@ -1,9 +1,21 @@
-{% extends "alumnos/menu_izquierdo.html" %}
+{% extends "alumnos/menu.html" %}
+
+
+{% block header %}
+  <h1>
+   Alumnos
+  </h1>
+  <ol class="breadcrumb">
+    <li><i class="fa fa-dashboard"></i> Alumnos</li>
+    <li>Importar desde Excel</li>
+  </ol>
+{% endblock  %}
+
 {% block container %}
 
-<div class="alert alert-info">
+<div class="alert alert-warning">
   <h4>Si desea descargar la plantilla para registrar los alumnos, dar click en el botón <strong>Descargar Plantilla de Excel</strong></h4>
-  <a href="/media/documentos/RegistroAlumnos.xlsm" type="button" class="btn btn-primary">Descargar Plantilla de Excel</a>
+  <a href="/media/documentos/RegistroAlumnos.xlsm" type="button" class="btn btn-info">Descargar Plantilla de Excel</a>
 </div>
 
 <div class="well well-lg">
@@ -21,77 +33,84 @@
 </div>
 
 
-
-<br>
-{% if errores %}
-	<div class="alert alert-danger">
-		<strong>El archivo tiene los siguientes error(es):</strong>
-		<br> <br>
-		{% for error in errores %}
-			<p> {{forloop.counter}}. {{error}} </p>
-		{% endfor %}
-	</div>
-{% endif %}
-
-<br><br><br>
 {% if bandera %}
-	<div>
-		<ul class="nav nav-tabs" role="tablist">
-			<li role="presentation" class="active"><a href="#ingresados" aria-controls="ingresados" role="tab" data-toggle="tab">Registros Ingresados</a></li>
-			<li role="presentation"><a href="#no_ingresados" aria-controls="no_ingresados" role="tab" data-toggle="tab">Registros no Ingresados</a></li>
-		</ul>
+<div class="box box-default">
+	<div class="box-header with-border">
+		<h3 class="box-title"><strong>Listado de Errores</strong></h3>
 
-		<div class="tab-content">
-			<div role="tabpanel" class="tab-pane active" id="ingresados">
-		    	<table class="table table-bordered">
-			    	<thead>
-			    		<tr>
-				    		<th>N. Fila</th>
-				    		<th>Identidad</th>
-				    		<th>Nombre</th>
-			    		</tr>
-			    	</thead>
-			    	<tbody>
-			    	{% for registro in ingresan %}
-			    		<tr>
-			    			<td>{{registro.fila}}</td>
-			    			<td>{{registro.identidad}}</td>
-			    			<td>{{registro.nombres}} {{registro.apellidos}}</td>
-				    	</tr>
-				    {% endfor %}
-			    	</tbody>
-			    </table>
-	    	</div>
-	    	<div role="tabpanel" class="tab-pane" id="no_ingresados">
-			    <table class="table table-bordered">
-			    	<thead>
-			    		<tr>
-				    		<th>N. Fila</th>
-				    		<th>Identidad</th>
-				    		<th>Nombre</th>
-				    		<th>Motivos</th>
-			    		</tr>
-			    	</thead>
-			    	<tbody>
-			    	{% for registro in no_ingresan %}
-			    		<tr>
-			    			<td>{{registro.fila}}</td>
-			    			<td>{{registro.identidad}}</td>
-			    			<td>{{registro.nombres}} {{registro.apellidos}}</td>
-			    			<td>
-			    				<ul>
-			    					{% for motivo in  registro.motivos %}
-						    		 	<li>{{motivo}}</li>
-						    		{% endfor %}
-			    				</ul>
-					    	</td>
-				    	</tr>
-				    {% endfor %}
-			    	</tbody>
-			    </table>
-			</div>
-	  	</div>
+		<div class="btn-group btn-proup-sm pull-right">
+			{% block boton_box %}  {% endblock  %}
+		</div>
 	</div>
+	<div class="box-body table-responsive">
+		{% if errores %}
+			<div class="alert alert-danger">
+				<strong>El archivo tiene los siguientes error(es):</strong>
+				<br> <br>
+				{% for error in errores %}
+					<p> {{forloop.counter}}. {{error}} </p>
+				{% endfor %}
+			</div>
+		{% endif %}		
+		<div>
+			<ul class="nav nav-tabs" role="tablist">
+				<li role="presentation" class="active"><a href="#ingresados" aria-controls="ingresados" role="tab" data-toggle="tab">Registros Ingresados</a></li>
+				<li role="presentation"><a href="#no_ingresados" aria-controls="no_ingresados" role="tab" data-toggle="tab">Registros no Ingresados</a></li>
+			</ul>
+
+			<div class="tab-content">
+				<div role="tabpanel" class="tab-pane active" id="ingresados">
+			    	<table class="table table-bordered">
+				    	<thead>
+				    		<tr>
+					    		<th>N. Fila</th>
+					    		<th>Identidad</th>
+					    		<th>Nombre</th>
+				    		</tr>
+				    	</thead>
+				    	<tbody>
+				    	{% for registro in ingresan %}
+				    		<tr>
+				    			<td>{{registro.fila}}</td>
+				    			<td>{{registro.identidad}}</td>
+				    			<td>{{registro.nombres}} {{registro.apellidos}}</td>
+					    	</tr>
+					    {% endfor %}
+				    	</tbody>
+				    </table>
+		    	</div>
+		    	<div role="tabpanel" class="tab-pane" id="no_ingresados">
+				    <table class="table table-bordered">
+				    	<thead>
+				    		<tr>
+					    		<th>N. Fila</th>
+					    		<th>Identidad</th>
+					    		<th>Nombre</th>
+					    		<th>Motivos</th>
+				    		</tr>
+				    	</thead>
+				    	<tbody>
+				    	{% for registro in no_ingresan %}
+				    		<tr>
+				    			<td>{{registro.fila}}</td>
+				    			<td>{{registro.identidad}}</td>
+				    			<td>{{registro.nombres}} {{registro.apellidos}}</td>
+				    			<td>
+				    				<ul>
+				    					{% for motivo in  registro.motivos %}
+							    		 	<li>{{motivo}}</li>
+							    		{% endfor %}
+				    				</ul>
+						    	</td>
+					    	</tr>
+					    {% endfor %}
+				    	</tbody>
+				    </table>
+				</div>
+		  	</div>
+		</div>
+	</div>
+</div>
 {% endif %}
 {% endblock %}
 
