Realice  el formulario docente
Realice el formulario del docente, en los tamplate estableci el inicio,
editar y lista, menu y base

--- a/UNAG/templates/general/admin_docentes_index.html
+++ b/UNAG/templates/general/admin_docentes_index.html
@@ -23,7 +23,7 @@
 		</div>
 		
 		<div class="panel panel-default">
-			<div class="panel-heading"><h4>Lista de Docentes con paginacion</h4></div>
+			<div class="panel-heading"><h4>Lista de Docentes </h4></div>
 			<div class="panel-body">
 				<table class="table table-striped table-bordered table-hover table-condensed" style="text-align:center">
 					<thead>
