--- a/UNAG/templates/general/campus_detalle.html
+++ b/UNAG/templates/general/campus_detalle.html
@@ -19,8 +19,7 @@
 		<a title="Nuevo Campus" class="btn btn-default" href="javascript:cambiarEstilo();">
 				<span class="glyphicon glyphicon-edit">&nbsp;</span>Editar
 		</a>
-		<button type="submit" form="formulario" title="Nuevo Campus" id="btn_guardar" class="btn btn-default"disabled>
-				<span class="glyphicon glyphicon-save">&nbsp;</span>Guardar
+		<button type="submit" form="formulario" title="Nuevo Campus" id="btn_guardar" class="btn btn-default"disabled><span class="glyphicon glyphicon-save">&nbsp;</span>Guardar
 		</button>
 	{% endif %}
 {% endblock  %}
