--- a/UNAG/templates/registro/nuevo_docente.html
+++ b/UNAG/templates/registro/nuevo_docente.html
@@ -129,7 +129,7 @@
 			<form id="frm_persona" role="form" name="frm_persona" action="." method="POST">
 				{% csrf_token %}
 				<fieldset>
-						<legend>Formulario Nuevo Catedrático</legend>
+						<legend>Formulario Nuevo Docente</legend>
 						<div class="form-group">
 							<label for="id_codigo_registro">Número de registro</label>
 							<div id="codigo_registro">
