--- a/UNAG/templates/home/menu_principal.html
+++ b/UNAG/templates/home/menu_principal.html
@@ -9,7 +9,7 @@
 	<div class="col-md-4"  style="vertical-align:middle;">
 		<div class="well">
 			<center>
-				<a href="{% url 'alumno_menu_principal' %}">
+				<a href="{% url 'alumno_lista' %}">
 					<img src="/media/images/student.png"  width="150" height="150">
 					<h3>Alumnos</h3>
 				</a>
