--- a/UNAG/templates/alumnos/lista.html
+++ b/UNAG/templates/alumnos/lista.html
@@ -17,14 +17,14 @@
 {% endblock  %}
 
 {% block boton_box %}
-	<a title="Nuevo Campus" class="btn btn-default" href="{% url 'vista_nuevo_campus' %}">
+	<a title="Nuevo Campus" class="btn btn-default" href="{% url 'alumno_registro' %}">
 		<span class="glyphicon glyphicon-plus">&nbsp;</span>Nuevo 
 	</a>
 {% endblock  %}
 
 {% block contenido_box %}
 		{% if perms.general.add_campus %}
-		<table id="tabla" class="table table-hover table-condensed">
+		<table id="tabla" class="table table-bordered table-striped">
 			<thead>
 				<tr>
 					<th>Código de Registro</th>
@@ -32,20 +32,21 @@
 					<th>Nombres</th>
 					<th>Apellidos</th>
 					<th>Telefono</th>
-					<th colspan="2">Acción</th>							
+					<th ></th>							
+					<th ></th>							
 				</tr>
 			</thead>
 			<tbody>
 				{% for alumno in alumnos %}
 					<tr>
-						<td>{{alumno.codigo_registro|upper}}</td>
-						<td>{{alumno.persona.identidad}}</td>
-						<td>{{alumno.persona.nombres|upper}}</td>
-						<td>{{alumno.persona.apellidos}}</td>
-						<td>{{alumno.persona.telefono}}</td>
+						<td>{{alumno.codigo_registro}}</td>
+						<td>{{alumno.persona.identidad|default:"---"}}</td>
+						<td>{{alumno.persona.nombres|default:"---"}}</td>
+						<td>{{alumno.persona.apellidos|default:"---"}}</td>
+						<td>{{alumno.persona.celular|default:"---"}}</td>
 						<td>
 							<center>
-								<a title="Ver" href="{% url 'vista_detalle_campus' alumno.pk %}" class="btn btn-success">
+								<a title="Ver" href="{% url 'alumno_editar' alumno.pk %}" class="btn btn-success">
 									<span class="glyphicon glyphicon-eye-open"></span>
 								</a>
 							</center>
@@ -53,7 +54,7 @@
 						<td>
 							{% if perms.general.delete_campus %}
 							<center>
-								<a title="Borrar" href="{% url 'vista_borrar_campus' alumno.pk %}" title="Borrar" class="btn btn-danger" onclick="return confirm('¿Esta seguro que quiere eliminar el campus <<{{ alumno.descripcion }}>>?');" class="btn btn-danger">
+								<a title="Borrar" href="{% url 'alumno_eliminar' alumno.pk %}" title="Borrar" class="btn btn-danger" onclick="return confirm('¿Esta seguro que quiere desactivar esta alumno <<{{ alumno.persona.nombres }} {{alumno.persona.apellidos}}>>?');" class="btn btn-danger">
 									<span class="glyphicon glyphicon-remove-circle"></span>
 								</a>
 							</center>
@@ -67,19 +68,11 @@
 {% endblock %}
 
 {% block js %}
-    <script src="/media/js/jquery.dataTables.min.js"></script>
-    <script src="/media/js/dataTables.bootstrap.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function(){
-	$('#tabla').DataTable({
-          "paging": true,
-          "lengthChange": false,
-          "searching": true,
-          "ordering": true,
-          "info": true,
-          "autoWidth": false
-        });
-})
-	
-</script>
+<script src="/media/js/jquery.dataTables.min.js"></script>
+<script src="/media/js/dataTables.bootstrap.min.js"></script>
+<script>
+      $(function () {
+        $('#tabla').DataTable();
+      });
+    </script>
 {% endblock  %}
