--- a/UNAG/templates/alumnos/menu.html
+++ b/UNAG/templates/alumnos/menu.html
@@ -10,7 +10,7 @@
 
 {% block navlist %}
     <li>
-      <a href="{% url 'alumno_menu_principal' %}">
+      <a href="{% url 'alumno_lista' %}">
         <i class="glyphicon glyphicon-user"></i> <span>Alumnos</span>
       </a>
     </li>
@@ -19,7 +19,7 @@
         <i class="glyphicon glyphicon-user"></i> <span>Ingreso de Alumnos</span> <i class="fa fa-angle-left pull-right"></i>
       </a>
       <ul class="treeview-menu">
-        <li><a href="{% url 'registro_primer_ingreso' %}"><i class="fa fa-circle-o"></i>Ingreso en línea</a></li>
+        <li><a href="{% url 'alumno_registro' %}"><i class="fa fa-circle-o"></i>Ingreso en línea</a></li>
         <li><a href="{% url 'alumno_registro_excel' %}"><i class="fa fa-circle-o"></i> Importar desde Excel</a></li>
       </ul>
     </li>
