ni idea que cambios

--- a/UNAG/templates/general/base.html
+++ b/UNAG/templates/general/base.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="/media/css/AdminLTE.min.css">
     <link rel="stylesheet" href="/media/css/skins/_all-skins.min.css">
+    <link rel="shortcut icon" type="image/png" href="/media/img/favicon.png"/>
+    
     {% block css %} {% endblock %}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
