Código de nueva asignatura
modificación en el código de nueva asignatura, seleccionando la carrera
y el tipo de asignatura laboratorio me tienen que cargar los módulos
correspondiente a la carrera seleccionada

--- a/UNAG/templates/docentes/base.html
+++ b/UNAG/templates/docentes/base.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
 
       <header class="main-header">
-        <a href="" class="logo">
+       <a href="{% url 'vista_main_first' %}" class="logo">
           <span class="logo-mini"><b>SARE</b></span>
           <span class="logo-lg"><b>SARE</b> UNAG</span>
         </a>
