--- a/UNAG/templates/docentes/registro.html
+++ b/UNAG/templates/docentes/registro.html
@@ -35,7 +35,7 @@
 <script type="text/javascript">
 
 	$(':input').each(function( index, obj ) {
-		if (obj.name != 'tipo_identificacion'){
+		if (obj.name != 'nombre'){
 			$(obj).addClass('form-control')
 		}
 		//console.log('asldjkasldkjasld',index, obj.type, obj.name)
