--- a/UNAG/templates/docentes/menu.html
+++ b/UNAG/templates/docentes/menu.html
@@ -1,7 +1,7 @@
-{% extends "docentes/base.html" %}
+{% extends "base.html" %}
 
 {% block navlist_header %}
-    ADMINISTRACION
+    DOCENTES
 {% endblock  %}
 
 {% block navlist %}
