--- a/UNAG/templates/general/menu.html
+++ b/UNAG/templates/general/menu.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block navlist_header %}
-    ADMINISTRACION
+    CAMPUS
 {% endblock  %}
 
 {% block titulo %}
-    Administración
+    Campus
 {% endblock  %}
 
 {% block navlist %}
