--- a/UNAG/templates/registro/departamento_academico_nuevo.html
+++ b/UNAG/templates/registro/departamento_academico_nuevo.html
@@ -1,10 +1,10 @@
 {% extends "registro/menu.html" %}
 {% block header %}
   <h1>
-   Campus
+   Departamentos Académicos
   </h1>
   <ol class="breadcrumb">
-    <li><i class="fa fa-dashboard"></i>Administración </li>
+    <li><i class="fa fa-dashboard"></i>Registro </li>
     <li>Departamentos Académicos</li>
     <li>Agregar</li>
   </ol>
