--- a/UNAG/templates/home/menu_principal.html
+++ b/UNAG/templates/home/menu_principal.html
@@ -41,7 +41,7 @@
 			<center>
 				<a href="{% url 'vista_main_administration' %}">
 					<img src="/media/images/setting.png" width="150" height="150">
-					<h3>Administración</h3>
+					<h3>Campus</h3>
 				</a>
 			</center>
 		</div>
