--- a/UNAG/templates/registro/carrera_bloque_nueva.html
+++ b/UNAG/templates/registro/carrera_bloque_nueva.html
@@ -1,29 +1,24 @@
 {% extends "registro/menu.html" %}
 {% block header %}
   <h1>
-   Carreras Bloque
+   CarreraBloque
   </h1>
   <ol class="breadcrumb">
     <li><i class="fa fa-dashboard"></i> Administración</li>
-    <li>CarrerasBloque</li>
+    <li>CarreraBloque</li>
     <li>Agregar</li>
   </ol>
 {% endblock  %}
 
 {% block titulo_box %}
-	Nueva Carrera
+	Nueva Carrera Bloque
 {% endblock  %}
 
 {% block contenido_box %}
-	<form id="frm_carrera" name="frm_carrera" action="." method="POST">{% csrf_token %}	
+	<form id="frm_carrerabloque" name="frm_carrerabloque" action="." method="POST">{% csrf_token %}	
 		{% if formulario.errors %}				
 			<div class="alert alert-danger">
 					<h4>Formulario contiene errores!!</h4>
-			</div>
-		{% else %}
-			<div class="alert alert-success">
-					<p><h4>Última carrerabloque guardada!!</h4>
-					{% for c in ultimo %} <b>"{{ c.nombre_carrera }}" el {{c.fecha_creacion}}</b> {% endfor %}<p>
 			</div>
 		{% endif %}
 		{{formulario.as_p}}
