--- a/UNAG/templates/registro/menu.html
+++ b/UNAG/templates/registro/menu.html
@@ -39,6 +39,16 @@
              <i class="glyphicon glyphicon-warning-sign"></i> <span>Tipos de Condiciones-Matricula</span>
       </a> 
     </li>
+    <li>
+      <a href = "{% url 'asignaturabloque_nuevo'%}">
+        <i class="glyphicon glyphicon-book"></i> <span>Asignatura Bloque</span>
+      </a> 
+    </li>
+    <li>
+      <a href = "{% url 'carrerabloque_nuevo' %}">
+        <i class="glyphicon glyphicon-road"></i> <span>Carrera Bloque</span>
+      </a> 
+    </li>
 {% endblock %}
 
 {% block container %}
